--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "@tanstack/react-query": "^5.40.1",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
+    "jose": "^5.4.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cookie": "^0.6.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
