--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@preline/toggle-password": "^2.3.0",
     "@tanstack/react-query": "^5.40.1",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
