--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
+    "tw-elements": "^2.0.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
