--- a/Backend/pyproject.toml
+++ b/Backend/pyproject.toml
@@ -9,7 +9,9 @@ dependencies = [
     "fastapi>=0.116.1",
     "jose>=1.0.0",
     "passlib>=1.7.4",
+    "prisma>=0.15.0",
     "pyjwt>=2.10.1",
+    "python-multipart>=0.0.20",
     "requests>=2.32.5",
     "uvicorn>=0.35.0",
 ]
