--- a/Backend/pyproject.toml
+++ b/Backend/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "passlib>=1.7.4",
     "prisma>=0.15.0",
     "pyjwt>=2.10.1",
+    "pytest>=8.4.2",
+    "pytest-asyncio>=1.1.0",
     "python-multipart>=0.0.20",
     "requests>=2.32.5",
     "uvicorn>=0.35.0",
