--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -15,5 +15,6 @@ dependencies = [
     "pytest-asyncio>=1.1.0",
     "python-multipart>=0.0.20",
     "requests>=2.32.5",
+    "sqlalchemy>=2.0.43",
     "uvicorn>=0.35.0",
 ]
