--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -7,12 +7,11 @@ requires-python = ">=3.13"
 dependencies = [
     "bcrypt>=4.3.0",
     "fastapi>=0.116.1",
-    "jose>=1.0.0",
     "passlib>=1.7.4",
     "prisma>=0.15.0",
-    "pyjwt>=2.10.1",
     "pytest>=8.4.2",
     "pytest-asyncio>=1.1.0",
+    "python-jose>=3.5.0",
     "python-multipart>=0.0.20",
     "requests>=2.32.5",
     "sqlalchemy>=2.0.43",
