--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "fastapi>=0.116.1",
     "passlib>=1.7.4",
     "prisma>=0.15.0",
+    "pydantic>=2.11.7",
     "pytest>=8.4.2",
     "pytest-asyncio>=1.1.0",
     "python-jose>=3.5.0",
