--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -5,8 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "aiomysql>=0.2.0",
+    "alembic>=1.16.5",
     "bcrypt>=4.3.0",
     "fastapi>=0.116.1",
+    "mysqlclient>=2.2.7",
     "passlib>=1.7.4",
     "prisma>=0.15.0",
     "pydantic>=2.11.7",
